--- a/dvc.yaml
+++ b/dvc.yaml
@@ -36,3 +36,14 @@ stages:
       - model_params.ElasticNet.alpha
     outs:
       - artifacts/model_dir/ElasticNet.model
+
+  evaluate:
+    cmd: python src/stage_04_evaluate.py --config=config/config.yaml --params=params.yaml
+    deps:
+      - src/stage_04_evaluate.py
+      - config/config.yaml
+      - params.yaml
+      - artifacts/split_data_dir/test.csv
+      - artifacts/model_dir/ElasticNet.model
+    outs:
+      - artifacts/reports_dir/scores.json
